# openidconnect-rs

./: Cargo.toml
examples/: auth0.rs
src/: claims.rs  discovery.rs  http_utils.rs  id_token.rs  lib.rs  registration.rs  types.rs  user_info.rs  verification.rs
tests/rp_common/: mod.rs.disable
