[package]
name = "openidconnect"
version = "2.0.0-alpha.1"
authors = ["David A. Ramos <ramos@cs.stanford.edu>"]
description = "OpenID Connect library"
license = "MIT"
repository = "https://github.com/ramosbugs/openidconnect-rs"
edition = "2018"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
base64 = "0.12"
chrono = "0.4"
failure = "0.1"
failure_derive = "0.1"
futures = "0.3"
http = "0.1"
itertools = "0.9"
log = "0.4"
oauth2 = { git = "https://github.com/phated/oauth2-rs", branch = "main" }
rand = "0.7"
ring = "0.16"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde-value = "0.6"
untrusted = "0.7"
url = "2.1"

[dev-dependencies]
color-backtrace = { version = "0.2" }
env_logger = "0.5"
pretty_assertions = "0.5"
retry = "0.5"
smol = "0.1"
http-client = "3.0"
